tests/core/error/expression-logical-3.rq
SELECT ('a' && true AS ?op) { }
